# eeg

./: .gitignore  CMakeLists.txt  README.md
matlab/: eego.cpp  eego_interface.m  testmain.m
src/: file_writer.cc  file_writer.h  main.cc
